--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -413,7 +413,7 @@
                                                         <outlet property="movieOverviewLabel" destination="2jj-9Y-5ug" id="GNg-hH-jAM"/>
                                                     </connections>
                                                 </tableViewCell>
-                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="movieTraillerCell" textLabel="1KF-ev-bHn" imageView="fnx-LR-sM2" style="IBUITableViewCellStyleDefault" id="WvT-Ux-W9Q" customClass="PCMainDetailsTrailerTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
+                                                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="movieTraillerCell" textLabel="1KF-ev-bHn" imageView="fnx-LR-sM2" style="IBUITableViewCellStyleDefault" id="WvT-Ux-W9Q">
                                                     <rect key="frame" x="0.0" y="72" width="464" height="44"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WvT-Ux-W9Q" id="XIO-h6-E4N">
