Fixed Updating Chart

--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -941,6 +941,6 @@
         <image name="trailerIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AZk-xC-Llh"/>
+        <segue reference="raM-0z-gmg"/>
     </inferredMetricsTieBreakers>
 </document>
