--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
             </objects>
             <point key="canvasLocation" x="1876" y="734"/>
         </scene>
-        <!--Project Cinema-->
+        <!--Feed-->
         <scene sceneID="a31-vY-IQz">
             <objects>
                 <tableViewController id="Rjp-qg-PNC" customClass="PCFeedTableViewController" customModule="Project_Cinema" customModuleProvider="target" sceneMemberID="viewController">
@@ -309,9 +309,7 @@
                             <outlet property="delegate" destination="Rjp-qg-PNC" id="O26-3g-S0V"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Project Cinema" id="uRG-G1-pi8">
-                        <barButtonItem key="backBarButtonItem" title="Feed" id="1xj-1t-cSh"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Feed" id="uRG-G1-pi8"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="zSg-0Y-zVf">
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
