--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -272,7 +272,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="E8M-LI-ZCf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="movieMainCell" rowHeight="377" id="dxP-Hi-Gez" customClass="PCMainDetailsMainTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="114" width="600" height="377"/>
@@ -737,36 +737,44 @@
         <scene sceneID="5n6-3C-Q6X">
             <objects>
                 <tableViewController id="j8I-Z9-EVM" customClass="PCFavoritesTableViewController" customModule="Project_Cinema" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="124" sectionHeaderHeight="28" sectionFooterHeight="28" id="zgv-k5-lj7">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="91" sectionHeaderHeight="28" sectionFooterHeight="28" id="zgv-k5-lj7">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteMovie" id="GiZ-yE-O5i" customClass="PCFavoritesTableViewCell" customModule="Project_Cinema" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="124"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="91"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GiZ-yE-O5i" id="eKc-by-L7y">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="123"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Es-2t-DaV">
-                                            <rect key="frame" x="8" y="8" width="80" height="107"/>
+                                            <rect key="frame" x="8" y="8" width="55" height="74"/>
                                             <color key="backgroundColor" red="0.83011744970000001" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="80" id="srU-lS-xbm"/>
+                                                <constraint firstAttribute="height" constant="74" id="D90-hB-LJ8"/>
+                                                <constraint firstAttribute="width" constant="55" id="uQK-mv-syP"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Vb-Oo-kPm">
-                                            <rect key="frame" x="96" y="8" width="496" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Vb-Oo-kPm">
+                                            <rect key="frame" x="71" y="8" width="521" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="6H2-cZ-Qbj"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="bottom" secondItem="eKc-by-L7y" secondAttribute="bottomMargin" id="26e-lD-wke"/>
-                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="top" secondItem="eKc-by-L7y" secondAttribute="topMargin" id="EJs-nE-AH9"/>
-                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="leading" secondItem="eKc-by-L7y" secondAttribute="leadingMargin" id="qIO-Hu-Frv"/>
+                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="bottom" secondItem="eKc-by-L7y" secondAttribute="bottomMargin" id="1SJ-3M-M3v"/>
+                                        <constraint firstItem="2Vb-Oo-kPm" firstAttribute="trailing" secondItem="eKc-by-L7y" secondAttribute="trailingMargin" id="7w0-nk-ZhL"/>
+                                        <constraint firstItem="2Vb-Oo-kPm" firstAttribute="leading" secondItem="4Es-2t-DaV" secondAttribute="trailing" constant="8" id="BQc-j0-AUl"/>
+                                        <constraint firstItem="2Vb-Oo-kPm" firstAttribute="leading" secondItem="4Es-2t-DaV" secondAttribute="trailing" constant="8" id="GK1-Ee-aBT"/>
+                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="leading" secondItem="eKc-by-L7y" secondAttribute="leadingMargin" id="ZaH-lo-PM5"/>
+                                        <constraint firstItem="2Vb-Oo-kPm" firstAttribute="top" secondItem="eKc-by-L7y" secondAttribute="topMargin" id="eOr-7M-nhd"/>
+                                        <constraint firstItem="4Es-2t-DaV" firstAttribute="top" secondItem="eKc-by-L7y" secondAttribute="topMargin" id="xbH-ol-vLx"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -842,6 +850,6 @@
         <image name="trailerIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ARj-tT-Kvi"/>
+        <segue reference="raM-0z-gmg"/>
     </inferredMetricsTieBreakers>
 </document>
