--- a/Project Cinema WK/Base.lproj/Interface.storyboard
+++ b/Project Cinema WK/Base.lproj/Interface.storyboard
@@ -8,7 +8,7 @@
         <!--Favorites-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller title="Favorites" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Project_Cinema_WK" customModuleProvider="target">
+                <controller identifier="favoritesInterface" title="Favorites" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Project_Cinema_WK" customModuleProvider="target">
                     <items>
                         <table alignment="left" id="zeP-Hh-d3a">
                             <items>
@@ -46,6 +46,7 @@
                                         <outlet property="mediaItemTitle" destination="Mmc-GC-0yR" id="hbr-lO-2wZ"/>
                                         <outlet property="mediaItemVoteAverage" destination="LeH-wh-x7m" id="TJB-sQ-UuO"/>
                                         <outlet property="mediaItemYear" destination="4oF-xY-uOG" id="kjD-Qt-Plj"/>
+                                        <segue destination="68X-bR-jyi" kind="push" identifier="showDetials" id="tKK-WV-ghM"/>
                                     </connections>
                                 </tableRow>
                             </items>
@@ -57,6 +58,58 @@
                 </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--detailsInterface-->
+        <scene sceneID="d51-IT-lvn">
+            <objects>
+                <controller identifier="detailsInterface" id="68X-bR-jyi" customClass="PCWKDetailsInterfaceController" customModule="Project_Cinema_WK_Extension">
+                    <items>
+                        <table alignment="left" id="cag-t3-2gj">
+                            <items>
+                                <tableRow identifier="generalDetailsRow" id="auH-IN-fki" customClass="PCWKDetailsGeneralRowController" customModule="Project_Cinema_WK_Extension">
+                                    <group key="rootItem" width="1" height="0.0" alignment="left" spacing="6" id="Ntb-bK-2Mn">
+                                        <items>
+                                            <separator height="1" heightAdjustment="-4" alignment="left" verticalAlignment="center" id="gP7-Xk-hkk">
+                                                <color key="color" red="0.98039215690000003" green="0.066666666669999999" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            </separator>
+                                            <group alignment="left" layout="vertical" spacing="2" id="lxN-TG-sJB">
+                                                <items>
+                                                    <group width="1" alignment="left" layout="vertical" spacing="0.0" id="2Eb-O2-JQw">
+                                                        <items>
+                                                            <label width="1" alignment="left" text="2015" id="TKR-dW-3or">
+                                                                <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
+                                                            </label>
+                                                            <label alignment="left" text="8.7" id="nuJ-7j-Bmp">
+                                                                <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                                            </label>
+                                                        </items>
+                                                    </group>
+                                                </items>
+                                            </group>
+                                        </items>
+                                    </group>
+                                </tableRow>
+                                <tableRow identifier="overviewRow" id="OeP-EI-IDv" customClass="PCWKDetailsOverviewRowController" customModule="Project_Cinema_WK_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="pyu-Vi-X32">
+                                        <items>
+                                            <label width="1" height="1" alignment="left" text="Very detailed overview Text" numberOfLines="100" id="Gk7-rH-sbe">
+                                                <fontDescription key="font" style="UICTFontTextStyleCaption2"/>
+                                            </label>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="overviewLabel" destination="Gk7-rH-sbe" id="fWr-TH-upC"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="detailsTable" destination="cag-t3-2gj" id="z57-9Y-Jwr"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="473" y="345"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
